src/test/resources/programs/invalid/lexer/TooLargeNumber.kool
2147483647
2147483648 // res: L2009
9223372036854775807L
9223372036854775808L //res: L2009